kubernetes/networking/cert-manager/manifests/nginx-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nginx.local.${userDomain}`)
      kind: Rule
      services:
        - name: nginx
          port: 80
    - match: Host(`www.nginx.local.${userDomain}`)
      kind: Rule
      services:
        - name: nginx
          port: 80
  tls:
    secretName: production-tls
